Changelog
=========

5.0-dev - (unreleased)
----------------------
* Feature: Use portal_daviz utility for default folder settings
  [szabozo0 refs #5449]
* Change: Added daviz.json adapter for IDavizVisualization content-type
  [voineali refs #5449]
* Change: Added IVisualizationData adapter for DavizVisualization content-type
  [voineali refs #5511]

4.9 - (2012-08-10)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
  [szabozo0 refs #5347]
* Bugfix: Fixed columns order
  [szabozo0 refs #5137]
* Feature: Added new action on data visualization "Create another visualization";
  Added action on Sparql "Create visualization with this dataset";
  Added action on all object which provides IVisualizationEnabled "Create another visualization"
  [szabozo0 refs #5347]
* Feature: use title of data source as default title for visualisation
  [szabozo0 refs #5138]

4.8 - (2012-07-13)
------------------
* Change: updated readme with info about google map API KEY configuration.
  [demarant refs #5338]

4.7 - (2012-07-04)
------------------
* Bug fix: Fixed possible_relations.xml when used togheter with eea.relations
  on a non-EEA Plone site
  [voineali refs #5330]

4.6 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Feature: Warn user about changing data risks
  [voineali fixes #4973]
* Feature: Added @@data.info adapter for DavizVisualization content-type in order
  to easily get data source and data owner metadata
  [voineali refs #5072]

4.5 - (2012-04-26)
------------------
* Feature: Possibility to add data provenance/source information when one
  copy&paste data tables or upload them via QuickUpload Widget
  [voineali refs #5072]

4.4 - (2012-03-30)
------------------
* Feature: added documentation and links on how to examples and
  how prepare data for visualizations.
  [demarant #4995]